@@ -1,1 +1,11 @@
 # tictactoeclient-ui
+
+This is an UI Client for the TicTacToe game. The application will connect with the server and will be able to play the game.
+Inorder to play, visit the following link: http://104.194.240.16, register and choose Tictactoe to play.
+
+To run the application, follow the steps below:
+- First download the release from this GitHub repository.
+- Extract the zip file.
+- Open the extracted folder.
+- Make sure your computer has at least Java 17 installed.
+- Run the following command in the terminal: `java --module-path . --add-modules javafx.controls,javafx.fxml,javafx.base -jar tictactoeclient-ui.jar --gui <port> <uid> <password>`
